# robotics-portfolio

./: .gitignore  README.md
cardiac-arrest-robot/: README.md  oakd_yolo.py  robot_b.py
hospital-digital-twin/: README.md
hospital-digital-twin/hospital_interfaces/: CMakeLists.txt  package.xml
hospital-digital-twin/hospital_interfaces/msg/: TransportStatus.msg
hospital-digital-twin/hospital_interfaces/srv/: CreateTransportTask.srv
hospital-digital-twin/hospital_robot_ui/: package.xml  setup.cfg  setup.py
hospital-digital-twin/hospital_robot_ui/hospital_robot/: data.py  hospital_ui_node.py
hospital-digital-twin/hospital_robot_ui/hospital_robot/static/: app.js  app_v1.js  style_v1.css
hospital-digital-twin/hospital_robot_ui/hospital_robot/templates/: index.html  index_v1.html
hospital-digital-twin/my_pkg/: package.xml  setup.py
hospital-digital-twin/my_pkg/my_pkg/: aruco_detector_pick_grip.py  aruco_generator.py  scenario_runner.py
packaging-robot/: README.md  dashboard.html  robot_control.py
unmanned-store-robot/: README.md
unmanned-store-robot/dsr_rokey/od_msg/: CMakeLists.txt  package.xml
unmanned-store-robot/dsr_rokey/od_msg/action/: PickAndPlace.action
unmanned-store-robot/dsr_rokey/od_msg/srv/: SrvDepthPosition.srv  UiCommand.srv
unmanned-store-robot/dsr_rokey/pick_and_place_voice/: setup copy.py  setup.py
unmanned-store-robot/dsr_rokey/pick_and_place_voice/launch/: action_servers.launch.py
unmanned-store-robot/dsr_rokey/pick_and_place_voice/object_detection/: detection.py  segmentation_service.py  yolov11_seg.py
(+15 files in other folders)
